@@ -43,9 +43,9 @@ Alle Abhängigkeiten sind in der Datei `build.gradle` definiert.
    ```
 
 4. **Anwendung als ausführbare JAR starten**:
-   Wenn du die Java-Version nicht global ändern möchtest, kannst du die Anwendung mit Java 21 direkt starten:
+   Die JavaFx Libraries (nicht die JARs) müssen gesondert gedownloaded, entpackt und eingebunden werden:
    ```bash
-   /path/to/java-21/bin/java -jar build/libs/comdirect-1.0.0.jar
+   java --module-path "C:\javafx-sdk-23.0.1\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.web --add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED -jar app.jar
    ```
 
    Ersetze `/path/to/java-21/` mit dem Verzeichnis, in dem sich dein Java 21 befindet.
